@@ -6,9 +6,11 @@ import dev.jobyfoster.skinpro.model.User;
 import dev.jobyfoster.skinpro.repository.SkincareRoutineRepository;
 import dev.jobyfoster.skinpro.repository.UserRepository;
 import dev.jobyfoster.skinpro.service.SkincareService;
+import dev.jobyfoster.skinpro.service.UserService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.userdetails.UserDetails;
+import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
@@ -19,13 +21,14 @@ import java.time.LocalDate;
 import java.util.List;
 import java.util.Optional;
 
-@RestController
+@Controller
 @RequestMapping("/api/v1/user")
 @RequiredArgsConstructor
 public class UserController {
     private final UserRepository userRepository;
     private final SkincareRoutineRepository skincareRoutineRepository;
     private final SkincareService skincareService;
+    private final UserService userService;
     @GetMapping(path="/completed/day")
     public String completeDayRoutine(Authentication authentication, Model model){
             UserDetails userDetails = (UserDetails) authentication.getPrincipal();
@@ -35,9 +38,19 @@ public class UserController {
                 return "error";
             }
             List<SkincareRoutine> dayRoutine = skincareService.getDayRoutine(user.get().getId());
-            dayRoutine.getFirst().setLastCompleted(LocalDate.now());
-            skincareRoutineRepository.save(dayRoutine.getFirst());
-            return "dashboard";
+        if (!dayRoutine.isEmpty()) {
+            SkincareRoutine firstDayRoutine = dayRoutine.get(0); // Use get(0) to access the first element
+            firstDayRoutine.setLastCompleted(LocalDate.now());
+            skincareRoutineRepository.save(firstDayRoutine);
+        } else {
+            // Handle the case where dayRoutine is empty
+            model.addAttribute("errorMessage", "No day routine found.");
+            return "dashboard"; // Or consider redirecting to another relevant page
+        }
+
+        userService.completeSkincareRoutine(user.get().getId());
+
+        return "redirect:/dashboard";
     }
 
     @GetMapping(path="/completed/night")
@@ -49,8 +62,20 @@ public class UserController {
             return "error";
         }
         List<SkincareRoutine> nightRoutine = skincareService.getNightRoutine(user.get().getId());
-        nightRoutine.getFirst().setLastCompleted(LocalDate.now());
-        skincareRoutineRepository.save(nightRoutine.getFirst());
-        return "dashboard";
+
+        // Ensure the list is not empty to avoid IndexOutOfBoundsException
+        if (!nightRoutine.isEmpty()) {
+            SkincareRoutine firstNightRoutine = nightRoutine.get(0); // Use get(0) to access the first element
+            firstNightRoutine.setLastCompleted(LocalDate.now());
+            skincareRoutineRepository.save(firstNightRoutine);
+        } else {
+            // Handle the case where nightRoutine is empty
+            model.addAttribute("errorMessage", "No night routine found.");
+            return "dashboard"; // Or consider redirecting to another relevant page
+        }
+        userService.completeSkincareRoutine(user.get().getId());
+
+        return "redirect:/dashboard"; // Use redirect to avoid form resubmission issues
     }
+
 }
